--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -13,13 +13,13 @@ bind-key b set status
 ## Copy mode
 ##
 
-unbind [
-bind Escape copy-mode
-setw -g mode-keys vi
-unbind p
-bind p paste-buffer
-bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
-bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
+#unbind [
+#bind Escape copy-mode
+setw -g mode-keys emacs
+#unbind p
+#bind p paste-buffer
+#bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+#bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
 
 
 ##
@@ -30,11 +30,11 @@ bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
 bind-key -n C-\ last-window
 bind-key -n C-b previous-window
 bind-key -n C-n next-window
-bind n next-window
-bind b previous-window
+#bind n next-window
+#bind b previous-window
 
 # Kill
-bind q kill-window
+bind q kill-pane
 bind Q kill-session
 
 ##
@@ -42,7 +42,7 @@ bind Q kill-session
 ##
 
 # Status bar
-set -g status-position bottom
+set -g status-position top
 set -g status-interval 4
 set -g status-left ''
 set -g status-right ''
