--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -27,9 +27,9 @@ setw -g mode-keys emacs
 ##
 
 # Panel splites and selection
-bind-key -n C-\ last-window
-bind-key -n C-b previous-window
-bind-key -n C-n next-window
+#bind-key -n C-\ last-window
+#bind-key -n C-b previous-window
+#bind-key -n C-n next-window
 #bind n next-window
 #bind b previous-window
 
@@ -107,16 +107,16 @@ bind-key Tab last-window
 bind-key v split-window -h
 bind-key s split-window -v
 
-bind-key -r Down resize-pane -D 2
-bind-key -r Up resize-pane -U 2
-bind-key -r Left resize-pane -L 2
-bind-key -r Right resize-pane -R 2
+bind-key -r j resize-pane -D 2
+bind-key -r k resize-pane -U 2
+bind-key -r h resize-pane -L 2
+bind-key -r l resize-pane -R 2
 
 # Use Alt-arrow keys without prefix key to switch panes
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
+bind -n M-j select-pane -U
+bind -n M-k select-pane -D
 
 bind > swap-pane -D       # swap current pane with the next one
 bind < swap-pane -U       # swap current pane with the previous one
