modify key-mode to emacs

--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -94,10 +94,10 @@ set-window-option -g automatic-rename on
 set-option -g set-titles on
 
 #set -g default-terminal screen-256color
-set -g status-keys vi
-set -g history-limit 10000
+set -g status-keys emacs
+set -g history-limit 9999999
 
-setw -g mode-keys vi
+setw -g mode-keys emacs
 #setw -g mode-mouse on
 setw -g monitor-activity on
 
